--- a/Source/Codaxy.Xlio/Codaxy.Xlio.csproj
+++ b/Source/Codaxy.Xlio/Codaxy.Xlio.csproj
@@ -1,8 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>netstandard2.1</TargetFramework>
-		<Nullable>enable</Nullable>
+		<TargetFramework>netstandard2.0</TargetFramework>
+		<LangVersion>8.0</LangVersion>
+		<Nullable>disable</Nullable>
 		<RunAnalyzersDuringBuild>True</RunAnalyzersDuringBuild>
 		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
 		<Description>Codaxy Excel IO library provides useful tool for rading/writing Excel files.</Description>
